crates/vouched/tests/ui/vouched/impls_try_from_borrowed_str_unsupported_ref.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(len(1..=8), impls(try_from(&u8)))]
struct UnsupportedReference(String);

fn main() {}
